# clapalong

./: Cargo.toml
public/: artifacts.json  changelog.rss  clapalong-installer.ps1.txt  clapalong-installer.sh.txt  index.html
public/artifacts/: index.html
public/changelog/: index.html
public/changelog/v0.1.0/: index.html
src/: main.rs
