[package]
name = "clapalong"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/eankorins/clapalong.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-xml-rs = "0.6.0"
